bynkc/tests/fixtures/positive/14_function_comparison/input.karn
commons demo {
  fn inRange(x: Int, lo: Int, hi: Int) -> Bool {
    x >= lo && x <= hi
  }
}
