bynkc/tests/fixtures/negative/28_record_extra_field/input.karn
commons test {
  type Point = { x: Int, y: Int }

  fn bad() -> Point {
    Point { x: 1, y: 2, extra: 3 }
  }
}
